added resource display, create, update, delete

--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resource Manager</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <!-- Header Section -->
@@ -152,6 +152,6 @@
     </div>
 
     <!-- Link JavaScript -->
-    <script src="app.js"></script>
+    <script src="/static/app.js"></script>
 </body>
 </html>
