added error display and script to populate the course to db

--- a/static/index.html
+++ b/static/index.html
@@ -152,6 +152,6 @@
     </div>
 
     <!-- Link JavaScript -->
-    <script src="/static/app.js"></script>
+    <script src="/static/app.js?v=2"></script>
 </body>
 </html>
